--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -7,7 +7,6 @@
 }
 
 .sidebar {
-  width: 40%;
   height: 100vh;
 }
 
@@ -23,40 +22,44 @@ $sidebar-top-height: 5rem;
   overflow-y: scroll;
   height: calc(100% - $sidebar-top-height);
   width: 100%;
-
-  .event {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    border-radius: 5px;
-
-    &:hover {
-      cursor: pointer;
-      background-color: rgb(228, 235, 255);
-    }
-
-    &.selected {
-      background-color: rgb(194, 210, 255);
-    }
-
-    .event_time {
-      width: 30%;
-      display: flex;
-      justify-content: flex-end;
-      padding: 0.5em;
-    }
-
-    .event_desc {
-      padding: 0.5em;
-      width: 70%;
-      //   display: flex;
-      //   justify-content: flex-start;
-    }
-  }
 }
 
-@media screen and (max-width: 900px) {
-  .sidebar {
-    width: 50%;
+.event {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  border-radius: 5px;
+
+  a {
+    text-decoration: none;
+    color: rgb(81, 0, 157);
+    border-radius: 2px;
+
+    &:hover {
+      background-color: rgb(204, 190, 255);
+    }
+  }
+
+  &:hover {
+    cursor: pointer;
+    background-color: rgb(228, 235, 255);
+  }
+
+  &.selected {
+    background-color: rgb(194, 210, 255);
+  }
+
+  .event_time {
+    width: 30%;
+    display: flex;
+    justify-content: flex-end;
+    padding: 0.5em;
+  }
+
+  .event_desc {
+    padding: 0.5em;
+    width: 70%;
+    //   display: flex;
+    //   justify-content: flex-start;
   }
 }
