add event margin

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -29,6 +29,7 @@ $sidebar-top-height: 5rem;
   display: flex;
   flex-direction: row;
   border-radius: 5px;
+  margin-left: 1rem;
 
   a {
     text-decoration: none;
