--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -7,7 +7,7 @@
 }
 
 .sidebar {
-  height: 100vh;
+  height: calc(100vh - 4rem);
 }
 
 $sidebar-top-height: 5rem;
@@ -20,7 +20,7 @@ $sidebar-top-height: 5rem;
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
-  height: calc(100% - $sidebar-top-height);
+  height: calc(100vh - 4rem);
   width: 100%;
 }
 
