--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -17,10 +17,8 @@ $sidebar-top-height: 5rem;
 }
 
 .events_list {
-  display: flex;
-  flex-direction: column;
+  height: 100%;
   overflow-y: scroll;
-  height: calc(100vh - 4rem);
   width: 100%;
 }
 
