--- a/client/src/components/maps/MapSection.scss
+++ b/client/src/components/maps/MapSection.scss
@@ -1,14 +1,15 @@
 .territory_tooltip {
-  font-weight: 600;
+  font-weight: 800;
+  font-size: 0.8rem;
   background-color: transparent;
   box-shadow: none;
   border: none;
   $halo: white;
-  //   text-shadow:
-  //     -1px -1px 0 $halo,
-  //     1px -1px 0 $halo,
-  //     -1px 1px 0 $halo,
-  //     1px 1px 0 $halo;
+  text-shadow:
+    -1px -1px 0 $halo,
+    1px -1px 0 $halo,
+    -1px 1px 0 $halo,
+    1px 1px 0 $halo;
 
   &::after,
   &::before {
