--- a/client/src/components/maps/MapSection.scss
+++ b/client/src/components/maps/MapSection.scss
@@ -35,3 +35,16 @@
     display: none;
   }
 }
+
+.ruler {
+  // color: #fff;
+  // font-size: 23px;
+  // line-height: 25px;
+  // text-align: center;
+  // vertical-align: bottom;
+  // box-shadow: 2px 1px 4px rgba(0, 0, 0, 0.2);
+  border-radius: 50%;
+  border-width: 3px;
+  border: 3px solid #fff;
+  // opacity: 0.9;
+}
